test_pointer/klee-out-0/test000001.ptr.err
Error: memory error: out of bound pointer
File: /home/ubuntu/test_pointer/point_struct.c
Line: 12
assembly.ll line: 26
Stack: 
	#000000026 in bar (foo_ptr) at /home/ubuntu/test_pointer/point_struct.c:12
	#100000055 in main () at /home/ubuntu/test_pointer/point_struct.c:24
Info: 
	address: (ReadLSB w64 0 foo)
	example: 0
	range: [0, 18446744073709551615]
	next: object at 19072976 of size 5
		MO17[5] allocated at global:.str28
